--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "body-parser": "^1.18.2",
     "create-react-app": "^2.1.3",
     "express": "^4.16.2",
