--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.2",
     "jwt-simple": "^0.5.1",
     "mongoose": "^5.0.7",
-    "password-hash": "^1.2.2"
+    "password-hash": "^1.2.2",
+    "typeface-roboto": "0.0.54"
   }
 }
